[package]
name = "argon2-cloudflare"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
getrandom = { version = "0.2.11", features = ["js"] }
rand_core = { version = "0.9.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
worker = "0.6.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
